# minecraft-recipe-renderer

./: .gitignore  README.md  main.py  pyproject.toml  test.py
minecraft_recipe_renderer/: __init__.py  api.py  item_renderer.py  resource_manager.py  utils.py
minecraft_recipe_renderer/classes/: __init__.py  canvas.py  item.py  model.py
minecraft_recipe_renderer/recipes/: __init__.py  blasting.py  campfire_cooking.py  crafting_shaped.py  crafting_shapeless.py  recipe.py  smelting.py  smithing_transform.py  smoking.py  stonecutting.py
minecraft_recipe_renderer/static/: styles.css
minecraft_recipe_renderer/templates/: atlas.html  item.html  recipes.html
templates/: atlas.html  item.html  recipes.html
